# remote_pi

./: .gitignore  CLAUDE.md  PROTOCOL.md  README.md  package.json
.github/workflows/: cockpit-release.yml
.orchestration/contracts/fixtures/: ask_user_prompt.jsonl  ask_user_resolved.jsonl  pair_request.jsonl  session_sync.jsonl
.pi/remote-pi/: config.json
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/integration_test/: ask_user_cancel_stale_test.dart
app/ios/: Podfile
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/config/: dependencies.dart
app/test/: protocol_test.dart
cockpit/: CHANGELOG.md  CLAUDE.md  pubspec.yaml
cockpit/docs/: tasks-json.md
cockpit/lib/: main.dart
cockpit/linux/: CMakeLists.txt  cockpit.desktop
cockpit/macos/: build_hook.sh
cockpit/test/: terminal_read_window_test.dart  widget_test.dart
cockpit/tool/: cockpit_cli.dart  cockpit_hook.dart  rpc_smoke.dart
pi-extension/: README.md  package.json
pi-extension/src/: extension.test.ts  index.ts
plan/: 00-decisions.md  23-owner-key-sync.md  24-mesh-membership.md  32-working-indicators.md  44-ask-user-prompt-cards.md  46-cockpit-av-preview.md  47-android-queued-editing.md  48-cockpit-task-run.md  48-cross-pc-mesh-routing-hardening.md
relay/: CLAUDE.md  Cargo.toml  README.md  push-docker.sh
relay/src/: identity.rs
relay/src/handlers/: peer.rs  pi_forward.rs
relay/src/peers/: registry.rs
relay/tests/: pi_forward_test.rs  presence_test.rs  rooms_test.rs
scripts/: cmux-bootstrap-agents.sh  cmux-dispatch.sh
site/: CLAUDE.md
(+309 files in other folders)
