[package]
name = "relay"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures-util = "0.3.32"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
